tests/fsharp/core/span/test3.bsl

test3.fsx(31,17,31,23): typecheck error FS0027: This value is not mutable. Consider using the mutable keyword, e.g. 'let mutable x = expression'.

test3.fsx(39,21,39,27): typecheck error FS0027: This value is not mutable. Consider using the mutable keyword, e.g. 'let mutable x = expression'.

test3.fsx(47,26,47,27): typecheck error FS0001: The type 'Span<int>' is not compatible with the type 'seq<'a>'

test3.fsx(48,21,48,27): typecheck error FS0027: This value is not mutable. Consider using the mutable keyword, e.g. 'let mutable x = expression'.

test3.fsx(47,26,47,27): typecheck error FS0193: Type constraint mismatch. The type 
    'Span<int>'    
is not compatible with type
    'seq<'a>'    

